# c2g-yew

./: Cargo.toml  README.md  app-2f2e504588505204.js  app-fb992e9e9c2a1a44.js  app-fb992e9e9c2a1a44_bg.wasm  index.html  worker.js  worker_bg.wasm
.github/workflows/: cd.yaml  ci.yaml
src/: agent.rs  lib.rs  main.rs
static/css/: stylesheet.css
