[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = ">=0.21"
c2g = { version = ">=0.8", git = "https://github.com/tomasfarias/c2g.git", features = ["default"] }
futures = ">=0.3"
yew = { version = ">=0.20", features = ["csr"] }

[dependencies.gloo-console]
version = ">=0.2"

[dependencies.gloo-file]
version = ">=0.2"
features = [
  "futures",
]

[dependencies.wasm-bindgen-futures]
version = ">=0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlTextAreaElement",
]

[dependencies.yew-hooks]
version = ">=0.2"
