[package]
name = "c2g-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = ">=0.21"
c2g = { version = ">=0.8.1", git = "https://github.com/tomasfarias/c2g.git", features = ["default"] }
futures = ">=0.3"
serde = "1"
yew = { version = ">=0.20", features = ["csr"] }

[dependencies.gloo-console]
version = ">=0.2"

[dependencies.gloo-file]
version = ">=0.2"
features = [
  "futures",
]

[dependencies.wasm-bindgen-futures]
version = ">=0.4"

[dependencies.web-sys]
version = ">=0.3.61"
features = [
  "HtmlTextAreaElement",
  "HtmlImageElement",
]

[dependencies.yew-agent]
version = ">=0.2"
